# pekora

./: .gitignore  README.md  WORKSPACE
.clwb/: .bazelproject
opus/: BUILD.bazel  opus
pekora/: BUILD  BUILD.bazel  main.cc  pekora.cc  pekora.h  variables.bzl
pekora/audio/: BUILD.bazel  constants.h  device.cc  device.h  session.h  wsapi_enumerator.cc  wsapi_enumerator.h
